--- a/src/components/App.css
+++ b/src/components/App.css
@@ -12,3 +12,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.Game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
